fixed alignment of set buttons

--- a/client/src/assets/css/nav_bar.css
+++ b/client/src/assets/css/nav_bar.css
@@ -45,9 +45,9 @@
     }
   }
 
-.brand-logo{
+/* .brand-logo{
     width:60%;
-}
+} */
 
 
 
